Fixed double scroll in descriptions.

--- a/css/descriptions.css
+++ b/css/descriptions.css
@@ -54,6 +54,33 @@ only screen and (min-device-width: 700px) {
         max-height: 85vh;
         object-fit: contain;
     }
+    .column {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-grow: 1;
+        align-self: flex-start;
+    }
+    .image {
+        flex: 1.2;
+        padding: 2rem;
+        height: auto;
+    }
+    .description {
+        color: var(--text-color);
+        font-weight: 200;
+        font-family: sans-serif;
+        flex: 1;
+        padding: 2rem;
+    }
+    .intro {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 75vh;
+        margin-bottom: 20vh;
+    }
 }
 
 body {
@@ -71,21 +98,19 @@ body {
     height: auto;
 }
 
-.intro {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 75vh;
-    margin-bottom: 20vh;
-}
-
 h1 {
     text-align: center;
     font-family: sans-serif;
     font-size: 5vw;
     font-weight: 300;
     color: var(--text-color);
+}
+
+img {
+    width: 100%;
+    max-width: 100vw;
+    max-height: 85vh;
+    object-fit: fill;
 }
 
 p {
@@ -166,9 +191,6 @@ div {
     text-align: left;
 }
 
-
-/* Pattern styles */
-
 section {
     height: 100%;
 }
@@ -181,20 +203,6 @@ section {
     flex-direction: var(--nav-dir);
     justify-content: center;
     overflow: auto;
-}
-
-.image {
-    flex: 1.2;
-    padding: 2rem;
-    height: auto;
-}
-
-.description {
-    color: var(--text-color);
-    font-weight: 200;
-    font-family: sans-serif;
-    flex: 1;
-    padding: 2rem;
 }
 
 h1 {
@@ -227,14 +235,6 @@ h2 {
     padding: 0px;
     height: 5vh;
     width: auto;
-}
-
-.column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-grow: 1;
-    align-self: flex-start;
 }
 
 .column+.column {
